Fixed restore-notice on narrow screens

--- a/client/common/blocks/restore_notice/restore_notice.styl
+++ b/client/common/blocks/restore_notice/restore_notice.styl
@@ -5,15 +5,20 @@
   position fixed
   left 50%
   top 200px
-  animation-name fadeInUp
+  max-width 100%
 
 .restore-notice__inner
 a.restore-notice__inner
   position relative
   left -50%
+  margin 0 20px
+  white-space: nowrap
+  overflow hidden
+  display block
+  text-overflow ellipsis
 
   background-color #666
-  border-radius 20px
+  border-radius 100px
   color #fff
   padding 10px 20px
   font-weight bold
